--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <button>Sign up</button>
         </div>
-        <footer>Copyrights &copy</footer>
+        <footer>Copyright &copy</footer>
     </div>
 </body>
 </html>
